--- a/app/views/course_templates/show.html.erb
+++ b/app/views/course_templates/show.html.erb
@@ -17,6 +17,15 @@
   </dd>
 </dl>
 
+<dl>
+  <dt>
+    Department
+  </dt>
+  <dd>
+    <a href="/departments/<%=@course.department_id%>"><%= Department.find(@course.department_id).name %></a>
+  </dd>
+</dl>
+
 <a href="/delete_course/<%= @course.id %>">
   Delete course
 </a>
