--- a/app/views/department_templates/show.html.erb
+++ b/app/views/department_templates/show.html.erb
@@ -15,6 +15,13 @@
   <dd>
     <%= @department.name %>
   </dd>
+  
+    <dt>
+    Number of courses
+  </dt>
+  <dd>
+    <%= Course.where(department_id: @department.id).count %>
+  </dd>
 </dl>
 
 <a href="/delete_department/<%= @department.id %>">
@@ -26,3 +33,32 @@
 <a href="/departments">
   Go back
 </a>
+
+<h4 class="pt-4">Courses</h4>
+<ul class="list-group">
+  <% Course.where(department_id: @department.id).each do |course|  %>
+  <li class="list-group-item">
+    <a href="/courses/<%=course.id%>"><%= course.title%></a>
+  </li>
+  <%end%>
+</ul>
+
+<h4 class="pt-4">Add a new course</h4>
+<form action="/create_course" method="post" class="mb-5">
+  <!-- Label and input for title -->
+  <div class="form-group">
+    <label for="title">
+      Title
+    </label>
+
+    <input type="text" id="title" name="title" class="form-control" value="<%= @course.try(:title) %>">
+  </div>
+  
+   <!-- Label and input for department -->
+
+    <input type="hidden" name="department_id" value="<%= @department.id%>">
+
+  <button class="btn btn-block btn-outline-secondary">
+    Create course
+  </button>
+</form>
