--- a/app/views/enrollment_templates/new_form.html.erb
+++ b/app/views/enrollment_templates/new_form.html.erb
@@ -12,7 +12,8 @@
       Course
     </label>
 
-    <input type="text" id="course_id" name="course_id" class="form-control">
+    <%= select_tag("course_id", options_from_collection_for_select(Course.all, :id, :title, @enrollment.try(:course_id)), :class => "form-control") %>
+    or <a href="/courses/new">add a new course</a> first
   </div>
 
   <div class="form-group">
@@ -20,7 +21,8 @@
       Student
     </label>
 
-    <input type="text" id="student_id" name="student_id" class="form-control">
+    <%= select_tag("student_id", options_from_collection_for_select(Student.all, :id, :last_name, @enrollment.try(:student_id)), :class => "form-control")%>
+    or <a href="/students/new">add a new student</a> first
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
