--- a/app/views/course_templates/show.html.erb
+++ b/app/views/course_templates/show.html.erb
@@ -26,6 +26,15 @@
   </dd>
 </dl>
 
+<dl>
+  <dt>
+    Number of enrolled students
+  </dt>
+  <dd>
+    <%= Enrollment.where(course_id: @course.id).count %>
+  </dd>
+</dl>
+
 <a href="/delete_course/<%= @course.id %>">
   Delete course
 </a>
@@ -35,3 +44,33 @@
 <a href="/courses">
   Go back
 </a>
+
+<h4 class="pt-4">Roster</h4>
+
+<ul class="list-group">
+  <% Enrollment.where(course_id: @course.id).each do |enroll|  %>
+  <li class="list-group-item">
+    <a href="/enrollments/<%=enroll.id%>"><%= Student.find(enroll.student_id).first_name%> <%= Student.find(enroll.student_id).last_name%></a>
+  </li>
+  <%end%>
+</ul>
+
+<h4 class="pt-4">Enroll a new student</h4>
+<form action="/create_enrollment" method="post" class="mb-5">
+  <!-- Label and input for student -->
+  <div class="form-group">
+    <label for="student">
+      Student
+    </label>
+
+    <%= select_tag("student_id", options_from_collection_for_select(Student.all, :id, :last_name, @enrollment.try(:student_id)), :class => "form-control") %>
+  </div>
+  
+   <!-- Label and input for department -->
+
+    <input type="hidden" name="course_id" value="<%= @course.id%>">
+
+  <button class="btn btn-block btn-outline-secondary">
+    Create enrollment
+  </button>
+</form>
